fix(Alert): add min-width so flex items don't collapse
Fixes INSTUI-954

Test plan:
- navigate to the Alert component
- reduce the browser width so the alerts are required to re-flow/
  resize... the content and the close button should no longer fall
  outside the alert container
- within the first example reduce the alert to a single word alert
  and the component should still display correctly

  before change: https://screencast.com/t/LKIwF9Bbw28
  after change: https://screencast.com/t/RwhsdIcbtg

Reviewed-on: https://gerrit.instructure.com/138483
Product-Review: Jennifer Stern <jstern@instructure.com>
Tested-by: Jenkins
QA-Review: Dan Sasaki <dsasaki@instructure.com>

--- a/packages/ui-core/src/components/Alert/styles.css
+++ b/packages/ui-core/src/components/Alert/styles.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   box-shadow: var(--boxShadow);
   display: flex;
+  min-width: 12rem;
   border-width: var(--borderWidth);
   border-style: var(--borderStyle);
   border-radius: var(--borderRadius);
@@ -13,8 +14,8 @@
   box-sizing: border-box;
   flex: 1;
   display: flex;
+  min-width: 1px;
   align-items: center;
-
   font-size: var(--contentFontSize);
   font-family: var(--contentFontFamily);
   font-weight: var(--contentFontWeight);
